# regression-analysis

./: README.md  config.py  data_hetero_188834.csv  data_ideal_188834.csv  data_outliers_188834.csv  data_skewed_188834.csv  devices_comparison.md  life_model_comparisons.py  linear_model.py  model_comparisons.py  plotting.py  pyproject.toml  regression_models.py  stat_tests.py  summaries.py  utils.py
tuning_notebooks/: grouped_tuning copy.ipynb
